# yvvgen.github.io

./: .gitignore  Cargo.toml  README.md  Trunk.toml  deploy.sh  index.html  input.css  output-700c54f27b611aae.css  package-lock.json  package.json  resume-18cbb3abceed3f14.js  resume-18cbb3abceed3f14_bg.wasm  resume-354f206d3da5923a.js  resume-354f206d3da5923a_bg.wasm  resume-5f88d25b0e18492a.js  resume-5f88d25b0e18492a_bg.wasm  rust-analyser.toml  tailwind.config.cjs  tailwind.config.js  test.html
src/: app.rs  main.rs
src/commands/: mod.rs
src/commands/built_in/: help.rs
src/components/: about.rs  contact.rs  experience.rs  font_switcher.rs  hero.rs  mod.rs  modal_frame.rs  projects.rs  skills.rs  terminal.rs  theme_switcher.rs
src/components/terminal/: emulator.rs  mod.rs  screen.rs
src/components/terminal_views/: help.rs
src/data/: ascii_art.rs  mod.rs  resume_data.rs
src/data/terminal/: command_result.rs  mod.rs  state.rs
src/hooks/: mod.rs
src/hooks/terminal/: mod.rs  use_command_history.rs
src/terminal/: command_result.rs  component.rs  mod.rs  screen.rs  state.rs
src/terminal/commands/: definition.rs  help.rs  mod.rs  registry.rs
src/terminal/hooks/: mod.rs  use_command_history.rs
src/terminal/views/: help.rs
src/utils/terminal/: mod.rs  registry.rs  traits.rs
src/views/: about.rs  contact.rs  experience.rs  hero.rs  mod.rs  projects.rs  skills.rs
src/windows/: about_window.rs  contact_window.rs  mod.rs  projects_window.rs
styles/: input.css  output.css
