[package]
name = "resume"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
theme = { version = "0.0.3", features = ["yew"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "DomRect",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "HtmlSelectElement",
]
