[package]
name = "resume"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["trunk", "yew"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1"
wasm-bindgen = "0.2"
yew = { version = "0.21", features = ["csr"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "DomRect",
  "Element",
  "HtmlElement",
  "HtmlLinkElement",
  "HtmlSelectElement",
  "IntersectionObserver",
  "IntersectionObserverEntry",
  "Window"
]
